Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112650

TextArea decorator not working as intended

XMLWordPrintable

    • All
    • 2d99c70f9 (dev), 50f4ed0e4 (dev), 8a94cf99a (6.5), 8544c0314 (6.5)

      The following GIF shows multiple bugs:
      1. The TextArea's Material.accent property is not respected inside the Flickable.
      2. The placeholderText is not part of the decorator, so it scrolls along the content.
      3. The CursorDelegate is shown beyond the TextArea's limits even when clipped.

      EDIT: There's is actually a fourth bug that I explain more carefully in the second comment:
      4. The placeholderText is cropped at half when the TextArea is clipped. This also applies to TextField.

      EDIT: There's another bug:
      5. The floating text should use the accent color. This also applies to TextField. In all cases I've seen so far, it uses an animation to transition from gray to the accent color and backwards.

      Source code (run with qml tool):

      import QtQuick
      import QtQuick.Controls.Material
      
      ApplicationWindow {
          width: 400
          height: 400
          visible: true
      
          Flickable {
              anchors.fill: parent
              anchors.margins: 100
      
              TextArea.flickable: TextArea {
                  placeholderText: "Type something..."
                  text: "a\nb\nc\nd\ne\nf\ng\nh\ni\nj\nk\nl\nm\nn"
              }
          }
      }
      

        1. Accent floating text.jpg
          Accent floating text.jpg
          17 kB
        2. Slow_animation.gif
          Slow_animation.gif
          333 kB
        3. TextArea-bugs.gif
          TextArea-bugs.gif
          232 kB
        4. TextArea-bugs2.gif
          TextArea-bugs2.gif
          311 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            ceperez1996 Carlos Pérez
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes