src/quickcontrols/material/TextArea.qml
@@ -44,6 +44,9 @@ T.TextArea {
         color: control.placeholderTextColor
         elide: Text.ElideRight
         renderType: control.renderType
+        // When the TextArea is in a Flickable, the background is reparented to it
+        // so that decorations don't move with the content. We need to do the same.
+        parent: control.background.parent
 
         filled: control.Material.containerStyle === Material.Filled
         verticalPadding: control.Material.textFieldVerticalPadding
